--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Zach Fudge | 50 US States Quiz</title>
-	<link rel="stylesheet" type="text/css" href="../src/map.css">
+	<link rel="stylesheet" type="text/css" href="map.css">
 </head>
 <body>
 	<h1>50 US States Quiz</h1>
@@ -264,6 +264,6 @@
 			<button id="reset">Reset</button>
 		</div>
 	</div>
-	<script type="text/javascript" src="bundle.js"></script>
+	<script type="text/javascript" src="../dist/bundle.js"></script>
 </body>
 </html>
